# vibranium

./: .azure-pipelines.yml  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/ISSUE_TEMPLATE/: refactor-proposal.md
.github/PULL_REQUEST_TEMPLATE/: bug_fix.md
cli/: Cargo.toml
cli/src/: error.rs  main.rs
cli/tests/: cli.rs
cli/tests/fixtures/: SimpleTestContract.abi  simple_test_contract.sol  simple_test_contract_2.sol  test_contract_with_node_module_import.sol
src/: blockchain.rs  lib.rs  utils.rs
src/accounts_manager/: error.rs  mod.rs
src/blockchain/: error.rs  mod.rs  support.rs
src/blockchain/connector/: mod.rs  web3_adapter.rs
src/code_generator/: error.rs  mod.rs
src/compiler/: error.rs  mod.rs  support.rs  utils.rs
src/compiler/strategy/: default.rs  mod.rs  solc.rs  solcjs.rs
src/config/: error.rs  mod.rs
src/deployment/: error.rs  mod.rs  tracker.rs
src/project_generator/: error.rs  mod.rs
