[package]
name = "vibranium"
description = "A library that offers APIs to build tools for creating decentralized applications."
version = "0.1.0"
authors = ["Pascal Precht <pascal.precht@gmail.com>"]
license = "MIT"
homepage = "https://github.com/PascalPrecht/vibranium"
repository = "https://github.com/PascalPrecht/vibranium"
documentation = "https://github.com/PascalPrecht/vibranium/blob/master/README.md"
edition = "2018"

[dependencies]
jsonrpc-core = "11.0.0"
ethabi = "7.0.0"
toml = "0.4.10"
toml-query = "0.8.0"
regex = "1"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
sha3 = "0.8"
log = "0.4.6"
petgraph = "0.4"
glob = "0.3"
web3 = "0.7.0"

[dev-dependencies]
tempfile = "3"
