[package]
name = "vibranium-cli"
version = "0.1.0"
authors = ["Pascal Precht <pascal.precht@gmail.com>"]
edition = "2018"

[dependencies]
clap = "2.32.0"
toml = "0.4.10"
log = "0.4.6"
env_logger="0.6.1"
vibranium = { path = "../" }

[dev-dependencies]
assert_cmd = "0.10"
predicates = "1"
toml = "0.4.10"
tempfile = "3"
float-cmp = "=0.4.0"
